--- a/works/autonomous_shadow.html
+++ b/works/autonomous_shadow.html
@@ -75,53 +75,38 @@
 				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 			</ul>
 
-			<!-- works detail drawing-->
-			<div class="fh5co-tab-content default-active" data-content="drawing">
+			<!-- works detail autonomous shadow-->
+			<div class="fh5co-tab-content default-active" data-content="autonomous_shadow">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h2>Drawing</h2>
-							<p>Written with a pen.</p>
+							<h2>Autonomous Shadow</h2>
+							<p>自律する影</p>
+							<p>東京大学制作展 2018 Dest-logy REBUILD</p>
+
 							<div class="fh5co-gallery">
+
 								<div class="gallery-item">
-									<img src="../images/works/drawing/whale.jpg" alt="whale">
+									<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">東京大学制作展で影が勝手に動き出す作品を展示してます。<br>19日までです。きてね！<a href="https://t.co/ilBse0iYLa">https://t.co/ilBse0iYLa</a><a href="https://twitter.com/artjng?ref_src=twsrc%5Etfw">@artjng</a> <a href="https://twitter.com/ohbushi?ref_src=twsrc%5Etfw">@ohbushi</a> と作ってます。 <a href="https://t.co/CSp3HhN1Jd">pic.twitter.com/CSp3HhN1Jd</a></p>&mdash; くっきー (@keitakuki) <a href="https://twitter.com/keitakuki/status/1062987728881561605?ref_src=twsrc%5Etfw">2018年11月15日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/lion.jpg" alt="lion">
+								<div class="fh5co-text">
+									<p><br>
+										2018/11/15(木)~19(月)に開催される<br>
+										<a href="http://www.iiiexhibition.com/" target = "_blank">東京大学制作展 2018 Dest-logy REBUILD</a><br>
+										にて展示中<br>
+										<br>
+										あなたの影があなたの意志とは無関係に動き出す作品です。<br>
+										<br>
+										普段その存在すら気に留めない自分の影が、<br>
+										自身と同じ動きをすると無自覚に信じている自分の影が、<br>
+										ひとりでに動き出したとしたら。<br>
+										<br>
+										気持ち悪いと思うのでしょうか。<br>
+										気がつきすらしないのでしょうか。<br>
+										別の生き物のように見えるのでしょうか。<br>
+										あるいは、もうひとりの自分の存在を感じるのでしょうか。<br>
+									</p>
 								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/hummingbird.jpg" alt="hummingbird">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/lion_polygons.jpg" alt="lion_polygons">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/tiger.jpg" alt="tiger">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf.jpg" alt="wolf">
-								</div>								
-								<div class="gallery-item">
-									<img src="../images/works/drawing/impala.jpg" alt="impala">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/horse.jpg" alt="horse">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/deer.jpg" alt="deer">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/serpentarius.jpg" alt="serpentarius">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/women_mechanical.jpg" alt="women_mechanical">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf_howling.jpg" alt="wolf_howling">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/skull_snake.jpg" alt="skull_snake">
-								</div>	
 							</div>
 						</div>
 					</div>
