--- a/works/kinect.html
+++ b/works/kinect.html
@@ -75,53 +75,48 @@
 				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 			</ul>
 
-			<!-- works detail drawing-->
-			<div class="fh5co-tab-content default-active" data-content="drawing">
+			<!-- works detail kinect-->
+			<div class="fh5co-tab-content default-active" data-content="kinect">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h2>Drawing</h2>
-							<p>Written with a pen.</p>
-							<div class="fh5co-gallery">
+							<h2>Interative art of body movement</h2>
+							<p>kinectによる身体運動の抽象表現</p>
+
+							<div class="fh5co-gallery ">
+								<div class="iframe-wrap">
+									<iframe src="https://www.youtube.com/embed/JT8pedftKfs" frameborder="0" allow="autoplay"></iframe>
+								</div>
+								<div class="fh5co-text">
+									<p>2017年度東京大学五月祭 学科展示</p>
+								</div>
+
 								<div class="gallery-item">
-									<img src="../images/works/drawing/whale.jpg" alt="whale">
+									<img src="../images/works/kinect_processing/reconstruction.png" alt="reconstruction">
+								</div>
+								<div class="fh5co-text">
+									<h2>粒子による表現</h2>
+									<p>人間の動きに対して粒子がゆっくりとまとわりつくように移動することで、外界との境界が不鮮明になる。時折粒子の追従する身体部位が変化し、身体が再構成されるような感覚に陥る。複数人いる場合には他者との粒子の入れ替わりも起こり、自己と他者の区別すらなくなる。</p>
+								</div>						
+
+								<div class="gallery-item">
+									<img src="../images/works/kinect_processing/line.png" alt="line">
+								</div>
+								<div class="fh5co-text">
+									<h2>線による表現</h2>
+									<p>動きの方向と速さを線の向き・長さ・色によって表現した。動かない部分は次第に見えなくなってゆく。動くことでのみ自己の存在を外界に対してアピールできる。</p>
+								</div>
+								
+								<div class="gallery-item">
+									<img src="../images/works/kinect_processing/charge.png" alt="charge">
 								</div>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/lion.jpg" alt="lion">
+									<img src="../images/works/kinect_processing/beam.png" alt="beam">
 								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/hummingbird.jpg" alt="hummingbird">
+								<div class="fh5co-text">
+									<h2>手の軌跡の描画</h2>
+									<p>手が動いた軌跡を一定時間三次元的に保持することができる。動きの空間的な広がりが意外に大きいことに気がつく。遊びの要素としてビームが撃てる機能を追加した。</p>
 								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/lion_polygons.jpg" alt="lion_polygons">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/tiger.jpg" alt="tiger">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf.jpg" alt="wolf">
-								</div>								
-								<div class="gallery-item">
-									<img src="../images/works/drawing/impala.jpg" alt="impala">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/horse.jpg" alt="horse">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/deer.jpg" alt="deer">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/serpentarius.jpg" alt="serpentarius">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/women_mechanical.jpg" alt="women_mechanical">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf_howling.jpg" alt="wolf_howling">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/skull_snake.jpg" alt="skull_snake">
-								</div>	
 							</div>
 						</div>
 					</div>
