--- a/works/moonvr.html
+++ b/works/moonvr.html
@@ -75,53 +75,44 @@
 				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 			</ul>
 
-			<!-- works detail drawing-->
-			<div class="fh5co-tab-content default-active" data-content="drawing">
+			<!-- works detail moonvr-->
+			<div class="fh5co-tab-content" data-content="moonvr">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h2>Drawing</h2>
-							<p>Written with a pen.</p>
+							<h2><a href="https://moon-vr.peatix.com/?lang=ja">Moon Sports VR Hackathon</a></h2>
+							
 							<div class="fh5co-gallery">
+								<p>
+									2018/5/19 - 5/20<br>
+									グリー, JAXA, テックショップジャパン主催のVRハッカソン<br>
+									近い将来実現するであろう月ならではのスポーツを考案し、VRで表現する。
+								</p>
+
+								<p>
+									人間は長い歴史の中で多くのスポーツを考案してきた。多様なルールが定められ、様々な身体運動が求められる中で、多くのスポーツに普遍的に存在する行為がある。"走る"ことだ。<br>
+									人間に足が生えている限り、たとえ人間が地球を離れ月に立ったとしても"走る"ことはスポーツとして残り続けるだろう。<br>
+								</p>
+								<p>
+									しかし、そのあり方は大きく変化する。<br>
+									重力が地球の1/6の環境下で、はるかに高くそして長く跳べる世界で、走ることは二次元ではなく三次元の移動方法として認識されるようになる。
+								</p>
+
 								<div class="gallery-item">
-									<img src="../images/works/drawing/whale.jpg" alt="whale">
+									<img src="../images/works/moonvr/steeplechase.jpeg" alt="steeplechase">
 								</div>
+								<p>
+									私たちのチームは Moon Steeplechase &mdash; 月面障害物競走を開発した。プレーヤーは高さ数メートルもの障害物を飛び越えながらゴールを目指す。<br>
+									重視したのは月で実際に走っているかのような感覚だ。大きく、ゆっくりとした歩調で高く、長く跳ぶ、そんな浮遊感をプレーヤーに提示したかった。
+								</p>
+
 								<div class="gallery-item">
-									<img src="../images/works/drawing/lion.jpg" alt="lion">
+									<img src="../images/works/moonvr/ginrikih.jpeg" alt="ginrikih">
 								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/hummingbird.jpg" alt="hummingbird">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/lion_polygons.jpg" alt="lion_polygons">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/tiger.jpg" alt="tiger">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf.jpg" alt="wolf">
-								</div>								
-								<div class="gallery-item">
-									<img src="../images/works/drawing/impala.jpg" alt="impala">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/horse.jpg" alt="horse">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/deer.jpg" alt="deer">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/serpentarius.jpg" alt="serpentarius">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/women_mechanical.jpg" alt="women_mechanical">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf_howling.jpg" alt="wolf_howling">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/skull_snake.jpg" alt="skull_snake">
-								</div>	
+								<p>
+									そこで考案したシステムが "Gravitational Interface by Real-time Kinetic Hammock" 略して "GInReKiH &mdash; 人力" だ。プレーヤーはハンモックに座り、開発メンバー四人がかりでプレーヤーの操作に合わせてハンモックを持ち上げる。<br>
+									単純なシステムだが、体験者の多くが想像以上の浮遊感に興奮の声をあげた。
+								</p>
 							</div>
 						</div>
 					</div>
