--- a/works/fractal.html
+++ b/works/fractal.html
@@ -75,53 +75,56 @@
 				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 			</ul>
 
-			<!-- works detail drawing-->
-			<div class="fh5co-tab-content default-active" data-content="drawing">
+			<!-- works detail fractal-->
+			<div class="fh5co-tab-content default-active" data-content="fractal">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h2>Drawing</h2>
-							<p>Written with a pen.</p>
+							<h2>Fractal</h2>
+							<p>by Processing</p>
 							<div class="fh5co-gallery">
+								<!-- <div class="iframe-wrap">
+									<iframe src="https://www.youtube.com/embed/4saaxVaMrd8" frameborder="0" allow="autoplay"></iframe>
+								</div> -->
 								<div class="gallery-item">
-									<img src="../images/works/drawing/whale.jpg" alt="whale">
+									<img src="../images/works/fractal/fractal_1.jpeg" alt="fractal_1">
 								</div>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/lion.jpg" alt="lion">
+									<img src="../images/works/fractal/fractal_2.jpeg" alt="fractal_2">
 								</div>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/hummingbird.jpg" alt="hummingbird">
+									<img src="../images/works/fractal/fractal_3.jpeg" alt="fractal_3">
 								</div>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/lion_polygons.jpg" alt="lion_polygons">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/tiger.jpg" alt="tiger">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf.jpg" alt="wolf">
-								</div>								
-								<div class="gallery-item">
-									<img src="../images/works/drawing/impala.jpg" alt="impala">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/horse.jpg" alt="horse">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/deer.jpg" alt="deer">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/serpentarius.jpg" alt="serpentarius">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/women_mechanical.jpg" alt="women_mechanical">
+									<img src="../images/works/fractal/fractal_4.jpeg" alt="fractal_4">
 								</div>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf_howling.jpg" alt="wolf_howling">
-								</div>	
+									<img src="../images/works/fractal/fractal_5.jpeg" alt="fractal_5">
+								</div>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/skull_snake.jpg" alt="skull_snake">
-								</div>	
+									<img src="../images/works/fractal/fractal_6.jpeg" alt="fractal_6">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_7.jpeg" alt="fractal_7">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_8.jpeg" alt="fractal_8">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_9.jpeg" alt="fractal_9">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_10.jpeg" alt="fractal_10">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_11.jpeg" alt="fractal_11">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_12.jpeg" alt="fractal_12">
+								</div>
+								<div class="gallery-item">
+									<img src="../images/works/fractal/fractal_13.jpeg" alt="fractal_13">
+								</div>
 							</div>
 						</div>
 					</div>
