--- a/works/thesis.html
+++ b/works/thesis.html
@@ -75,53 +75,41 @@
 				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
 			</ul>
 
-			<!-- works detail drawing-->
-			<div class="fh5co-tab-content default-active" data-content="drawing">
+			<!-- works detail thesis-->
+			<div class="fh5co-tab-content" data-content="thesis">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
-							<h2>Drawing</h2>
-							<p>Written with a pen.</p>
+							<h2>Graduation thesis</h2>
+							<h3>平塚沖を事例とした統計的アプローチによる局所的な海上風の短期予測</h3>
+							
 							<div class="fh5co-gallery">
 								<div class="gallery-item">
-									<img src="../images/works/drawing/whale.jpg" alt="whale">
+									<img src="../images/works/thesis/sailing.jpg" alt="sailing">
 								</div>
+								<p>
+									2020年東京オリンピックにおいて江ノ島周辺海域でセーリング競技が開催される。東京大学では、セーリング競技支援に取り組んでおり、本研究はセーリング競技に重要な海上風の予測精度を向上させることで、選手のアドバンテージとなる情報提供を行うことを目的としている。
+								</p>
+
+								<p>
+									競技で求められる海上風の情報は数時間程度先における数km程度のレース海域に関する風速と風向で、時空間スケールが小さい。気象庁が提供する数値予報モデル（MSM）では解像されていない海陸風などのローカルな現象があると予想され、その予測精度には限界があると考えられる。そこで本研究では、統計的なアプローチを導入することで、局所的な海上風の予測精度の改善を検討する。また局所的な現象と関連するローカルな観測データを予測手法に含めることの効果について検討する。
+								</p>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/lion.jpg" alt="lion">
+									<img src="../images/works/thesis/graph1.png" alt="graph1">
 								</div>
+								<p>
+									本研究では、レース海域付近の平塚沖総合実験タワー（以下、平塚塔）で観測された海上風を用いて、統計的なアプローチの有効性について検証を行なった。モデル構築において、MSMに加えて、平塚塔観測データ、平塚・辻堂・小田原におけるAMeDASの観測値、そして相模湾の海洋ブイによる海水温データを学習データとして利用した。また、FFNN（Feedforward Neural Network）、RNN（Recurrent Neural Network）、アンサンブル回帰の機械学習の手法を用いた。上記の学習データおよび学習手法について、1, 2, 3時間後における東西・南北風速の予測精度を指標として、有効性について検証を行った。
+								</p>
 								<div class="gallery-item">
-									<img src="../images/works/drawing/hummingbird.jpg" alt="hummingbird">
+									<img src="../images/works/thesis/graph2.png" alt="graph2">
 								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/lion_polygons.jpg" alt="lion_polygons">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/tiger.jpg" alt="tiger">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf.jpg" alt="wolf">
-								</div>								
-								<div class="gallery-item">
-									<img src="../images/works/drawing/impala.jpg" alt="impala">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/horse.jpg" alt="horse">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/deer.jpg" alt="deer">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/serpentarius.jpg" alt="serpentarius">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/women_mechanical.jpg" alt="women_mechanical">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/drawing/wolf_howling.jpg" alt="wolf_howling">
-								</div>	
-								<div class="gallery-item">
-									<img src="../images/works/drawing/skull_snake.jpg" alt="skull_snake">
-								</div>	
+								<p>
+									学習の結果では、全ての手法について各予測時間で数値予報を超える精度を得ることが確認できた。また最も精度が高かったのはアンサンブル回帰であり、ローカルな情報を加えることによる予測精度改善も確認された。セーリング競技支援に有用な風速・風向に変換して解釈した場合にも精度が上がることを示し、統計的アプローチが予測精度の改善に有効であることを示した。
+								</p>
+								<p>
+									気象庁の予報と比較すると、MSMと平塚塔観測データを学習に用いた予測モデルで精度が大幅に改善した。またローカルな情報を学習データに含めた際にも予測精度の改善が見られた一方、その効果は東西・南北風速で異なる傾向が見られ、東西方向では海洋ブイデータが、南北方向ではAMeDASデータが精度に寄与するという結果が得られた。また予測精度改善の効果は限定的であり、誤差改善が特徴的に現れる時間帯や気象現象との関連性は見られなかったため、ローカルなデータによって局所的な現象を捉えられたとは言い難い。精度の向上は見られたため、さらなる情報の追加によって精度が改善する可能性は示唆された。
+
+								</p>								
 							</div>
 						</div>
 					</div>
