--- a/works/moonvr.html
+++ b/works/moonvr.html
@@ -76,7 +76,7 @@
 			</ul>
 
 			<!-- works detail moonvr-->
-			<div class="fh5co-tab-content" data-content="moonvr">
+			<div class="fh5co-tab-content default-active" data-content="moonvr">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
