--- a/works/thesis.html
+++ b/works/thesis.html
@@ -76,7 +76,7 @@
 			</ul>
 
 			<!-- works detail thesis-->
-			<div class="fh5co-tab-content" data-content="thesis">
+			<div class="fh5co-tab-content default-active" data-content="thesis">
 				<div class="fh5co-content-inner">
 					<div class="row">
 						<div class="col-md-12">
