--- a/works/sigharium.html
+++ b/works/sigharium.html
@@ -81,16 +81,25 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h2>Sigh-arium</h2>
-							<p>東京大学制作展 Extra 2018 Dest-logy</p>
+							<p>東京大学制作展 Extra 2018 <a href="http://iiiexhibition.com/log/iiiEx2018/#modal_work11" target="_blank">Dest-logy</a></p>
+
+							<div class="fh5co-text">
+								<p>
+									日本テレビ「nextクリエイターズ」でSighariumが紹介されました。<br>
+									<a href="http://www.ntv.co.jp/nextcreators/backnumber/creator59.html" target="_blank">クリエイターFILE #59 ため息に反応する水槽</a>
+								</p>
+							</div>
 
 							<div class="fh5co-gallery">
+
 								<div class="iframe-wrap">
 									<iframe src="https://www.youtube.com/embed/BLdDSMw7Sqw" frameborder="0" allow="autoplay"></iframe>
 								</div>
 
-								<div class="gallery-item">
+								<!-- <div class="gallery-item">
 									<img src="../images/works/sigharium/sigharium.jpg" alt="sigharium">
-								</div>
+								</div> -->
+
 								<div class="fh5co-text">
 									<p><br>
 										「ため息をつくと幸せが逃げるよ」<br>
@@ -104,7 +113,7 @@
 										落ち込んだ自己への気づき、それに寄り添ってくれる光。<br>
 										どうか、少しだけ前向きになれますように。
 									</p>
-								</div>						
+								</div>					
 
 								<div class="gallery-item">
 									<img src="../images/works/sigharium/yellow.jpg" alt="yellow">
