--- a/works/autonomous_shadow.html
+++ b/works/autonomous_shadow.html
@@ -82,20 +82,16 @@
 						<div class="col-md-12">
 							<h2>Autonomous Shadow</h2>
 							<p>自律する影</p>
-							<p>東京大学制作展 2018 Dest-logy REBUILD</p>
+							<p>東京大学制作展 2018 <a href="http://www.iiiexhibition.com/#modal_work1" target="_blank">Dest-logy REBUILD</a></p>
 
 							<div class="fh5co-gallery">
 
 								<div class="gallery-item">
-									<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">東京大学制作展で影が勝手に動き出す作品を展示してます。<br>19日までです。きてね！<a href="https://t.co/ilBse0iYLa">https://t.co/ilBse0iYLa</a><a href="https://twitter.com/artjng?ref_src=twsrc%5Etfw">@artjng</a> <a href="https://twitter.com/ohbushi?ref_src=twsrc%5Etfw">@ohbushi</a> と作ってます。 <a href="https://t.co/CSp3HhN1Jd">pic.twitter.com/CSp3HhN1Jd</a></p>&mdash; くっきー (@keitakuki) <a href="https://twitter.com/keitakuki/status/1062987728881561605?ref_src=twsrc%5Etfw">2018年11月15日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+									<img src="../images/works/autonomous_shadow/autonomous_shadow.jpg" alt="autonomous_shadow">
 								</div>
-								
+
 								<div class="fh5co-text">
 									<p><br>
-										2018/11/15(木)~19(月)に開催される<br>
-										<a href="http://www.iiiexhibition.com/" target = "_blank">東京大学制作展 2018 Dest-logy REBUILD</a><br>
-										にて展示中<br>
-										<br>
 										あなたの影があなたの意志とは無関係に動き出す作品です。<br>
 										<br>
 										普段その存在すら気に留めない自分の影が、<br>
@@ -108,6 +104,17 @@
 										あるいは、もうひとりの自分の存在を感じるのでしょうか。<br>
 									</p>
 								</div>
+
+								<div class="gallery-item">
+									<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">東京大学制作展で影が勝手に動き出す作品を展示してます。<br>19日までです。きてね！<a href="https://t.co/ilBse0iYLa">https://t.co/ilBse0iYLa</a><a href="https://twitter.com/artjng?ref_src=twsrc%5Etfw">@artjng</a> <a href="https://twitter.com/ohbushi?ref_src=twsrc%5Etfw">@ohbushi</a> と作ってます。 <a href="https://t.co/CSp3HhN1Jd">pic.twitter.com/CSp3HhN1Jd</a></p>&mdash; くっきー (@keitakuki) <a href="https://twitter.com/keitakuki/status/1062987728881561605?ref_src=twsrc%5Etfw">2018年11月15日</a></blockquote> <script src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+									<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">影だと思ってたら・・・えっ・・・えーーーーっ！？ <a href="https://twitter.com/hashtag/iiiEx?src=hash&amp;ref_src=twsrc%5Etfw">#iiiEx</a> <a href="https://twitter.com/hashtag/%E6%9D%B1%E5%A4%A7%E5%88%B6%E4%BD%9C%E5%B1%95?src=hash&amp;ref_src=twsrc%5Etfw">#東大制作展</a> <a href="https://t.co/TFYEEQfpBB">pic.twitter.com/TFYEEQfpBB</a></p>&mdash; HomeiMiyashita (@HomeiMiyashita) <a href="https://twitter.com/HomeiMiyashita/status/1063993862857744384?ref_src=twsrc%5Etfw">2018年11月18日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+									<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">影が勝手に動き出すと、急に体の自由が奪われたような気がして、よろけそうになったり、影の方に体を合わせないとと体が動いたり…。普段は意識してないけど 、影と自分との関係が突然崩されると、その関係性が突然現れる。無意識のうちに影との関係を意識してるんだなぁ。<a href="https://twitter.com/hashtag/iiiex?src=hash&amp;ref_src=twsrc%5Etfw">#iiiex</a> <a href="https://t.co/pes4Omzp33">pic.twitter.com/pes4Omzp33</a></p>&mdash; カサネタリウム (@kasanetarium) <a href="https://twitter.com/kasanetarium/status/1064044197680795648?ref_src=twsrc%5Etfw">2018年11月18日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+									<blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">面白い〜 <a href="https://twitter.com/hashtag/iiiEx?src=hash&amp;ref_src=twsrc%5Etfw">#iiiEx</a> <a href="https://twitter.com/hashtag/iiiexhibition?src=hash&amp;ref_src=twsrc%5Etfw">#iiiexhibition</a> <a href="https://twitter.com/hashtag/%E6%9D%B1%E5%A4%A7%E5%88%B6%E4%BD%9C%E5%B1%95?src=hash&amp;ref_src=twsrc%5Etfw">#東大制作展</a> <a href="https://t.co/yU9Q7PGBsa">pic.twitter.com/yU9Q7PGBsa</a></p>&mdash; タナゴ@チームタナゴ (@1_design) <a href="https://twitter.com/1_design/status/1064443734480179200?ref_src=twsrc%5Etfw">2018年11月19日</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+
+								</div>								
 							</div>
 						</div>
 					</div>
@@ -134,7 +141,7 @@
 			</div>
 		</footer>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="../js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
