fix instagram url

--- a/works/drawing.html
+++ b/works/drawing.html
@@ -135,7 +135,7 @@
 						<!-- <h2>Contact</h2> -->
 						<li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
 						<li><a href="https://twitter.com/keitakuki" target="_blank"><i class="icon-twitter"></i></a></li>
-						<li><a href="https://www.instagram.com/keita.cookie/" target="_blank"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.instagram.com/keita.kuki/" target="_blank"><i class="icon-instagram"></i></a></li>
 						<li><a href="https://github.com/Keita-Kuki" target="_blank"><i class="icon-github"></i></a></li>
 						<!-- <li><a href="#" target="_blank"><i class="icon-google"></i></a></li> -->
 						<!-- <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li> -->
