--- a/index.html
+++ b/index.html
@@ -86,15 +86,18 @@
 							<p>九鬼 慧太</p>
 							<p>
 								Graduate student at the University of Tokyo<br>
-								Majoring: Interdisciplinary Information
+							</p>
+							<p>
+								Majoring<br>
+								Interdisciplinary Information
 							</p>
 							<p>
 								Enginner<br>
-								iOS App, API server, Unity, DB management
+								Unity, Houdini, Python, Swift, Node.js
 							</p>
 							<p>
 								Interest<br>
-								Fashion, Drawing, Coding, Media Art, Machine Learning, HCI
+								Visual Coding, Media Art, Machine Learning, HCI, Drawing 
 							</p>
 						</div>
 					</div>
