--- a/works/drawing.html
+++ b/works/drawing.html
@@ -81,7 +81,7 @@
 					<div class="row">
 						<div class="col-md-12">
 							<h2>Drawing</h2>
-							<p>Written with a pen.</p>
+							<p>Written with pen.</p>
 							<div class="fh5co-gallery">
 								<div class="gallery-item">
 									<img src="../images/works/drawing/whale.jpg" alt="whale">
