--- a/works/kinect.html
+++ b/works/kinect.html
@@ -1,19 +1,20 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Keita KUKI | 九鬼 慧太</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-  <!-- 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Keita KUKI | 九鬼 慧太</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+    <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+    <meta name="author" content="FreeHTML5.co" />
+    <!-- 
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE 
@@ -26,137 +27,131 @@
 
 	//////////////////////////////////////////////////////
 	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Keita Kuki portfolio" />
-	<meta property="og:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
-	<meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
-	<meta property="og:site_name" content="Keita Kuki portfolio"/>
-	<meta property="og:description" content="Graduate student at the University of Tokyo" />
-	<meta name="twitter:title" content="Keita Kuki portfolio" />
-	<meta name="twitter:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
-	<meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
-	<meta name="twitter:site" content="@keitakuki" />
-	<meta name="twitter:card" content="summary" />
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="../favicon.ico">
-
-	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="../css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="../css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="../css/bootstrap.css">
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="../css/style.css">
-
-	<!-- Modernizr JS -->
-	<script src="../js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="Keita Kuki portfolio" />
+    <meta property="og:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
+    <meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
+    <meta property="og:site_name" content="Keita Kuki portfolio" />
+    <meta property="og:description" content="Graduate student at the University of Tokyo" />
+    <meta name="twitter:title" content="Keita Kuki portfolio" />
+    <meta name="twitter:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
+    <meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
+    <meta name="twitter:site" content="@keitakuki" />
+    <meta name="twitter:card" content="summary" />
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="../favicon.ico">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="../css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="../css/icomoon.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- Modernizr JS -->
+    <script src="../js/modernizr-2.6.2.min.js"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+</head>
+<img src="../images/bg_img.jpg" hidden="true">
 
-	</head>
-	<img src="../images/bg_img.jpg" hidden="true">
-	<body style="background-image: url(../images/bg_img.jpg);">
-	
-	<div id="fh5co-main">
-		<div class="fh5co-tab-wrap">
+<body style="background-image: url(../images/bg_img.jpg);">
+    <div id="fh5co-main">
+        <div class="fh5co-tab-wrap">
+            <ul class="fh5co-tab-menu">
+                <li tab="profile"><a href="../index.html?tab=profile" data-tab="profile" data-trans="yes"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
+                <li tab="works" class=" default-active"><a href="../index.html?tab=works" data-tab="works" data-trans="yes"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
+                <li tab="education"><a href="../index.html?tab=education" data-tab="education" data-trans="yes"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
+                <li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
+            </ul>
+            <!-- works detail kinect-->
+            <div class="fh5co-tab-content default-active" data-content="kinect">
+                <div class="fh5co-content-inner">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>Interative art of body movement</h2>
+                            <p>kinectによる身体運動の抽象表現</p>
+                            <div class="fh5co-gallery ">
+                                <div class="iframe-wrap">
+                                    <iframe src="https://www.youtube.com/embed/JT8pedftKfs" frameborder="0" allow="autoplay"></iframe>
+                                </div>
+                                <div class="fh5co-text">
+                                    <p><br>2017年度東京大学五月祭 学科展示<br></p>
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/kinect_processing/reconstruction.png" alt="reconstruction">
+                                </div>
+                                <div class="fh5co-text">
+                                    <h2>粒子による表現</h2>
+                                    <p><br>
+                                        人間の動きに対して粒子がゆっくりとまとわりつくように移動することで、外界との境界が不鮮明になる。<br>
+                                        時折粒子の追従する身体部位が変化し、身体が再構成されるような感覚に陥る。<br>複数人いる場合には他者との粒子の入れ替わりも起こり、自己と他者の区別すらなくなる。<br></p>
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/kinect_processing/line.png" alt="line">
+                                </div>
+                                <div class="fh5co-text">
+                                    <h2>線による表現</h2>
+                                    <p><br>
+                                        動きの方向と速さを線の向き・長さ・色によって表現した。<br>
+                                        動かない部分は次第に見えなくなってゆく。<br>
+                                        動くことでのみ自己の存在を外界に対してアピールできる。<br>
+                                    </p>
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/kinect_processing/charge.png" alt="charge">
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/kinect_processing/beam.png" alt="beam">
+                                </div>
+                                <div class="fh5co-text">
+                                    <h2>手の軌跡の描画</h2>
+                                    <p><br>
+                                        手が動いた軌跡を一定時間三次元的に保持することができる。<br>
+                                        動きの空間的な広がりが意外に大きいことに気がつく。<br>
+                                        遊びとしてビームが撃てる要素を実装した。<br></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer id="fh5co-footer">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <ul class="fh5co-social">
+                        <!-- <h2>Contact</h2> -->
+                        <li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
+                        <li><a href="https://twitter.com/keitakuki" target="_blank"><i class="icon-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/keita.kuki/" target="_blank"><i class="icon-instagram"></i></a></li>
+                        <li><a href="https://github.com/Keita-Kuki" target="_blank"><i class="icon-github"></i></a></li>
+                        <!-- <li><a href="#" target="_blank"><i class="icon-google"></i></a></li> -->
+                        <!-- <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li> -->
+                    </ul>
+                    <small>
+                        &copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
+                            Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
+                    </small>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <!-- jQuery -->
+    <script src="../js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="../js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="../js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="../js/jquery.waypoints.min.js"></script>
+    <!-- Easy PieChart -->
+    <script src="../js/jquery.easypiechart.min.js"></script>
+    <!-- MAIN JS -->
+    <script src="../js/main.js"></script>
+</body>
 
-			<ul class="fh5co-tab-menu">
-
-				<li tab="profile"><a href="../index.html?tab=profile" data-tab="profile" data-trans="yes"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
-				<li tab="works" class=" default-active"><a href="../index.html?tab=works" data-tab="works" data-trans="yes"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
-				<li tab="education"><a href="../index.html?tab=education" data-tab="education" data-trans="yes"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
-			</ul>
-
-			<!-- works detail kinect-->
-			<div class="fh5co-tab-content default-active" data-content="kinect">
-				<div class="fh5co-content-inner">
-					<div class="row">
-						<div class="col-md-12">
-							<h2>Interative art of body movement</h2>
-							<p>kinectによる身体運動の抽象表現</p>
-
-							<div class="fh5co-gallery ">
-								<div class="iframe-wrap">
-									<iframe src="https://www.youtube.com/embed/JT8pedftKfs" frameborder="0" allow="autoplay"></iframe>
-								</div>
-								<div class="fh5co-text">
-									<p>2017年度東京大学五月祭 学科展示</p>
-								</div>
-
-								<div class="gallery-item">
-									<img src="../images/works/kinect_processing/reconstruction.png" alt="reconstruction">
-								</div>
-								<div class="fh5co-text">
-									<h2>粒子による表現</h2>
-									<p>人間の動きに対して粒子がゆっくりとまとわりつくように移動することで、外界との境界が不鮮明になる。時折粒子の追従する身体部位が変化し、身体が再構成されるような感覚に陥る。複数人いる場合には他者との粒子の入れ替わりも起こり、自己と他者の区別すらなくなる。</p>
-								</div>						
-
-								<div class="gallery-item">
-									<img src="../images/works/kinect_processing/line.png" alt="line">
-								</div>
-								<div class="fh5co-text">
-									<h2>線による表現</h2>
-									<p>動きの方向と速さを線の向き・長さ・色によって表現した。動かない部分は次第に見えなくなってゆく。動くことでのみ自己の存在を外界に対してアピールできる。</p>
-								</div>
-								
-								<div class="gallery-item">
-									<img src="../images/works/kinect_processing/charge.png" alt="charge">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/kinect_processing/beam.png" alt="beam">
-								</div>
-								<div class="fh5co-text">
-									<h2>手の軌跡の描画</h2>
-									<p>手が動いた軌跡を一定時間三次元的に保持することができる。動きの空間的な広がりが意外に大きいことに気がつく。遊びの要素としてビームが撃てる機能を追加した。</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer id="fh5co-footer">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center">
-					<ul class="fh5co-social">
-						<!-- <h2>Contact</h2> -->
-						<li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a href="https://twitter.com/keitakuki" target="_blank"><i class="icon-twitter"></i></a></li>
-						<li><a href="https://www.instagram.com/keita.kuki/" target="_blank"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://github.com/Keita-Kuki" target="_blank"><i class="icon-github"></i></a></li>
-						<!-- <li><a href="#" target="_blank"><i class="icon-google"></i></a></li> -->
-						<!-- <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li> -->
-					</ul>
-					<small>
-						&copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
-						Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
-					</small>
-				</div>
-			</div>
-		</footer>
-	</div>
-	
-	<!-- jQuery -->
-	<script src="../js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="../js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="../js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="../js/jquery.waypoints.min.js"></script>
-	<!-- Easy PieChart -->
-	<script src="../js/jquery.easypiechart.min.js"></script>
-	<!-- MAIN JS -->
-	<script src="../js/main.js"></script>
-
-	</body>
 </html>
-
