--- a/works/sigharium.html
+++ b/works/sigharium.html
@@ -1,19 +1,20 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Keita KUKI | 九鬼 慧太</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
 
-  <!-- 
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Keita KUKI | 九鬼 慧太</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
+    <meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+    <meta name="author" content="FreeHTML5.co" />
+    <!-- 
 	//////////////////////////////////////////////////////
 
 	FREE HTML5 TEMPLATE 
@@ -26,152 +27,146 @@
 
 	//////////////////////////////////////////////////////
 	 -->
-
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Keita Kuki portfolio" />
-	<meta property="og:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
-	<meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
-	<meta property="og:site_name" content="Keita Kuki portfolio"/>
-	<meta property="og:description" content="Graduate student at the University of Tokyo" />
-	<meta name="twitter:title" content="Keita Kuki portfolio" />
-	<meta name="twitter:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
-	<meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
-	<meta name="twitter:site" content="@keitakuki" />
-	<meta name="twitter:card" content="summary" />
-
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="../favicon.ico">
-
-	<!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
-	
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="../css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="../css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="../css/bootstrap.css">
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="../css/style.css">
-
-	<!-- Modernizr JS -->
-	<script src="../js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
+    <!-- Facebook and Twitter integration -->
+    <meta property="og:title" content="Keita Kuki portfolio" />
+    <meta property="og:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
+    <meta property="og:url" content="https://keita-kuki.github.io/portfolio/" />
+    <meta property="og:site_name" content="Keita Kuki portfolio" />
+    <meta property="og:description" content="Graduate student at the University of Tokyo" />
+    <meta name="twitter:title" content="Keita Kuki portfolio" />
+    <meta name="twitter:image" content="https://keita-kuki.github.io/portfolio/images/profile_img.png" />
+    <meta name="twitter:url" content="https://keita-kuki.github.io/portfolio/" />
+    <meta name="twitter:site" content="@keitakuki" />
+    <meta name="twitter:card" content="summary" />
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="../favicon.ico">
+    <!-- <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'> -->
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="../css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <link rel="stylesheet" href="../css/icomoon.css">
+    <!-- Bootstrap  -->
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <!-- Theme style  -->
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- Modernizr JS -->
+    <script src="../js/modernizr-2.6.2.min.js"></script>
+    <!-- FOR IE9 below -->
+    <!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+</head>
+<img src="../images/bg_img.jpg" hidden="true">
 
-	</head>
-	<img src="../images/bg_img.jpg" hidden="true">
-	<body style="background-image: url(../images/bg_img.jpg);">
-	
-	<div id="fh5co-main">
-		<div class="fh5co-tab-wrap">
-
-			<ul class="fh5co-tab-menu">
-
-				<li tab="profile"><a href="../index.html?tab=profile" data-tab="profile" data-trans="yes"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
-				<li tab="works" class=" default-active"><a href="../index.html?tab=works" data-tab="works" data-trans="yes"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
-				<li tab="education"><a href="../index.html?tab=education" data-tab="education" data-trans="yes"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
-				<li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
-			</ul>
-
-			<!-- works detail sigharium-->
-			<div class="fh5co-tab-content default-active" data-content="sigharium">
-				<div class="fh5co-content-inner">
-					<div class="row">
-						<div class="col-md-12">
-							<h2>Sigh-arium</h2>
-							<p>東京大学制作展 Extra 2018 <a href="http://iiiexhibition.com/log/iiiEx2018/#modal_work11" target="_blank">Dest-logy</a></p>
-
-							<div class="fh5co-text">
-								<p>
-									日本テレビ「nextクリエイターズ」でSighariumが紹介されました。<br>
-									<a href="http://www.ntv.co.jp/nextcreators/backnumber/creator59.html" target="_blank">クリエイターFILE #59 ため息に反応する水槽</a>
-								</p>
-							</div>
-
-							<div class="fh5co-gallery">
-
-								<div class="iframe-wrap">
-									<iframe src="https://www.youtube.com/embed/BLdDSMw7Sqw" frameborder="0" allow="autoplay"></iframe>
-								</div>
-
-								<!-- <div class="gallery-item">
+<body style="background-image: url(../images/bg_img.jpg);">
+    <div id="fh5co-main">
+        <div class="fh5co-tab-wrap">
+            <ul class="fh5co-tab-menu">
+                <li tab="profile"><a href="../index.html?tab=profile" data-tab="profile" data-trans="yes"><span class="icon icon-male"></span><span class="menu-text">Profile</span></a></li>
+                <li tab="works" class=" default-active"><a href="../index.html?tab=works" data-tab="works" data-trans="yes"><span class="icon icon-codepen"></span><span class="menu-text">Works</span></a></li>
+                <li tab="education"><a href="../index.html?tab=education" data-tab="education" data-trans="yes"><span class="icon icon-graduation-cap"></span><span class="menu-text">Education</span></a></li>
+                <li tab="experience"><a href="../index.html?tab=experience" data-tab="experience" data-trans="yes"><span class="icon icon-black-tie"></span><span class="menu-text">Experience</span></a></li>
+            </ul>
+            <!-- works detail sigharium-->
+            <div class="fh5co-tab-content default-active" data-content="sigharium">
+                <div class="fh5co-content-inner">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>Sigh-arium</h2>
+                            <p>東京大学制作展 Extra 2018 <a href="http://iiiexhibition.com/log/iiiEx2018/#modal_work11" target="_blank">Dest-logy</a></p>
+                            <div class="fh5co-gallery">
+                                <div class="fh5co-text">
+                                    <p>
+                                        日本テレビ「nextクリエイターズ」でSighariumが紹介されました。<br>
+                                        <a href="http://www.ntv.co.jp/nextcreators/backnumber/creator59.html" target="_blank">クリエイターFILE #59 ため息に反応する水槽</a>
+                                    </p>
+                                </div>
+                                <div class="gallery-item">
+                                    <div class="iframe-wrap">
+                                        <iframe src="https://www.youtube.com/embed/BLdDSMw7Sqw" frameborder="0" allow="autoplay"></iframe>
+                                    </div>
+                                </div>
+                                <!-- <div class="gallery-item">
 									<img src="../images/works/sigharium/sigharium.jpg" alt="sigharium">
 								</div> -->
+                                <div class="fh5co-text">
+                                    <p><br>
+                                        「ため息をつくと幸せが逃げるよ」<br>
+                                        そうして逃げた幸せはどこへ行くのか。<br>
+                                        もしも幸せが身体から離れていくのなら、周りの空間があなたの代わりに幸せになるのか。<br>
+                                        <br>
+                                        疲れたとき、失望したとき、ふと零れるため息。<br>
+                                        これはあなたが零した幸せを、あなたの傍に少しだけ留めておく水槽。<br>
+                                        吐き出された幸せは泡となって水中を漂い、花々がそれに反応する。<br>
+                                        <br>
+                                        落ち込んだ自己への気づき、それに寄り添ってくれる光。<br>
+                                        どうか、少しだけ前向きになれますように。
+                                    </p>
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/sigharium/yellow.jpg" alt="yellow">
+                                </div>
+                                <div class="fh5co-text">
+                                    <p><br>
+                                        ため息をついてしまったときに、前向きな気持ちになれるように手助けするメディアアート作品。<br>
+                                        ため息というネガティブな行為をポジティブに捉え直すことができる。<br>
+                                        <br>
+                                        「ため息をつくと幸せが逃げる」という言葉がある。<br>
+                                        逃げていく幸せを、水中を漂う泡とそれに呼応して光る花々として表現する。<br>
+                                        <br>
+                                        見た目の美しさだけでなく、泡と光の上昇に伴って自然に顔が上がることによっても心理状態の改善につながる。<br>
+                                        また、ため息をついたことを外部から指摘されることで、自己の心理状態を客観視するきっかけにもなりうる。<br>
+                                        <br>
+                                        ため息の検出には機械学習を用いた。
+                                    </p>
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/sigharium/sigharium2.jpg" alt="sigharium">
+                                </div>
+                                <!--                                 <div class="gallery-item">
+                                    <img src="../images/works/sigharium/sigharium_report_1.jpg" alt="sigharium_report_1">
+                                </div>
+                                <div class="gallery-item">
+                                    <img src="../images/works/sigharium/sigharium_report_2.jpg" alt="sigharium_report_2">
+                                </div> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer id="fh5co-footer">
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <ul class="fh5co-social">
+                        <!-- <h2>Contact</h2> -->
+                        <li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
+                        <li><a href="https://twitter.com/keitakuki" target="_blank"><i class="icon-twitter"></i></a></li>
+                        <li><a href="https://www.instagram.com/keita.kuki/" target="_blank"><i class="icon-instagram"></i></a></li>
+                        <li><a href="https://github.com/Keita-Kuki" target="_blank"><i class="icon-github"></i></a></li>
+                        <!-- <li><a href="#" target="_blank"><i class="icon-google"></i></a></li> -->
+                        <!-- <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li> -->
+                    </ul>
+                    <small>
+                        &copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
+                            Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
+                    </small>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <!-- jQuery -->
+    <script src="../js/jquery.min.js"></script>
+    <!-- jQuery Easing -->
+    <script src="../js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap -->
+    <script src="../js/bootstrap.min.js"></script>
+    <!-- Waypoints -->
+    <script src="../js/jquery.waypoints.min.js"></script>
+    <!-- Easy PieChart -->
+    <script src="../js/jquery.easypiechart.min.js"></script>
+    <!-- MAIN JS -->
+    <script src="../js/main.js"></script>
+</body>
 
-								<div class="fh5co-text">
-									<p><br>
-										「ため息をつくと幸せが逃げるよ」<br>
-										そうして逃げた幸せはどこへ行くのか。<br> 
-										もしも幸せが身体から離れていくのなら、周りの空間があなたの代わりに幸せになるのか。<br>
-										<br>
-										疲れたとき、失望したとき、ふと零れるため息。<br>
-										これはあなたが零した幸せを、あなたの傍に少しだけ留めておく水槽。<br>
-										吐き出された幸せは泡となって水中を漂い、花々がそれに反応する。<br>
-										<br>
-										落ち込んだ自己への気づき、それに寄り添ってくれる光。<br>
-										どうか、少しだけ前向きになれますように。
-									</p>
-								</div>					
-
-								<div class="gallery-item">
-									<img src="../images/works/sigharium/yellow.jpg" alt="yellow">
-								</div>
-								<div class="fh5co-text">
-									<p>
-										<br>
-										機械学習でため息を検出し、水槽がそれに反応する。<br>
-										ため息というネガティブな行為をポジティブに捉え直すことができる。
-									</p>
-								</div>
-
-								<div class="gallery-item">
-									<img src="../images/works/sigharium/sigharium_report_1.jpg" alt="sigharium_report_1">
-								</div>
-								<div class="gallery-item">
-									<img src="../images/works/sigharium/sigharium_report_2.jpg" alt="sigharium_report_2">
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<footer id="fh5co-footer">
-			<div class="row">
-				<div class="col-md-6 col-md-offset-3 text-center">
-					<ul class="fh5co-social">
-						<!-- <h2>Contact</h2> -->
-						<li><a href="mailto:kukikeita@gmail.com"><i class="icon-envelope"></i></a></li>
-						<li><a href="https://twitter.com/keitakuki" target="_blank"><i class="icon-twitter"></i></a></li>
-						<li><a href="https://www.instagram.com/keita.kuki/" target="_blank"><i class="icon-instagram"></i></a></li>
-						<li><a href="https://github.com/Keita-Kuki" target="_blank"><i class="icon-github"></i></a></li>
-						<!-- <li><a href="#" target="_blank"><i class="icon-google"></i></a></li> -->
-						<!-- <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a></li> -->
-					</ul>
-					<small>
-						&copy; 2016 Personal Free HTML5 Template. All Rights Reserved. <span class="fh5co-author">
-						Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></span>
-					</small>
-				</div>
-			</div>
-		</footer>
-	</div>
-	
-	<!-- jQuery -->
-	<script src="../js/jquery.min.js"></script>
-	<!-- jQuery Easing -->
-	<script src="../js/jquery.easing.1.3.js"></script>
-	<!-- Bootstrap -->
-	<script src="../js/bootstrap.min.js"></script>
-	<!-- Waypoints -->
-	<script src="../js/jquery.waypoints.min.js"></script>
-	<!-- Easy PieChart -->
-	<script src="../js/jquery.easypiechart.min.js"></script>
-	<!-- MAIN JS -->
-	<script src="../js/main.js"></script>
-
-	</body>
 </html>
-
