--- a/ar/stand.html
+++ b/ar/stand.html
@@ -76,6 +76,7 @@ a.cp_btn:active:after {
         <a-entity camera></a-entity>
     </a-scene>
     <div style="position: fixed; top: 90%; left: 50%; transform: translate(-50%, -50%);">
+        <a href="./markerless_stand.html" class="cp_btn">Nothing Displayed</a>
         <a href="../" class="cp_btn">Back to Portfolio</a>
     </div>
 </body>
