--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
 						<div class="col-md-12">
 							<div class="fh5co-gallery">
 
+								<a class="gallery-item" data-tab="ar_self_introduction" href="ar/stand.html">
+									<img src="images/works/ar_self_introduction/ar.jpg" alt="ar_self_introduction">
+									<span class="overlay">
+										<h2>AR 自己紹介(仮)</h2>
+										<span>AR自己アバターによる自己紹介</span>
+									</span>
+								</a>
+
 								<a class="gallery-item" data-tab="autonomous_shadow" href="works/autonomous_shadow.html">
 									<img src="images/works/autonomous_shadow/autonomous_shadow.jpg" alt="autonomous_shadow">
 									<span class="overlay">
@@ -125,6 +133,14 @@
 									<span class="overlay">
 										<h2>Sigh-arium</h2>
 										<span>東京大学制作展 Extra 2018 Dest-logy</span>
+									</span>
+								</a>
+
+								<a class="gallery-item" data-tab="fragile_fragments" href="works/fragile_fragments.html">
+									<img src="images/works/fragile_fragments/fragile_fragments.jpg" alt="fragile_fragments">
+									<span class="overlay">
+										<h2>fragile fragments</h2>
+										<span>teamLab 2018 Summer Intern</span>
 									</span>
 								</a>
 
