--- a/ar/markerless_stand.html
+++ b/ar/markerless_stand.html
@@ -7,6 +7,7 @@
 <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 <!-- gltf animation -->
 <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v6.0.0/dist/aframe-extras.min.js"></script>
+
 <style type="text/css">
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
@@ -63,20 +64,18 @@ a.cp_btn:active:after {
             <img id="name_img" src="avatar/name.png">
         </a-assets>
         <a-light type="ambient" color="#fff" intensity="1.0"></a-light>
-        <a-marker type="pattern" url="avatar/marker_0.5.patt">
-            <!-- avatar -->
-            <a-entity gltf-model="#avatar" animation-mixer position="0 0 0" rotation="-90 0 0" scale="1 1 1"></a-entity>
-            <!-- text -->
-            <a-entity position="0 0 0" rotation="-30 180 0" scale="1 1 1">
-                <a-image src="#name_img" width="2" height="2">
-                    <a-animation attribute="rotation" to="0 0 360" dur="4000" repeat="indefinite" easing="linear"></a-animation>
-                </a-image>
-            </a-entity>
-        </a-marker>
+        <!-- avatar -->
+        <a-entity gltf-model="#avatar" animation-mixer position="0 -0.5 -5" rotation="0 0 0" scale="1 1 1"></a-entity>
+        <!-- text -->
+        <a-entity position="0 -0.5 -6" rotation="-40 0 0" scale="1 1 1">
+            <a-image src="#name_img" width="2" height="2">
+                <a-animation attribute="rotation" to="0 0 360" dur="4000" repeat="indefinite" easing="linear"></a-animation>
+            </a-image>
+        </a-entity>
         <a-entity camera></a-entity>
     </a-scene>
     <div style="position: fixed; top: 90%; left: 50%; transform: translate(-50%, -50%);">
-        <a href="./markerless.html" class="cp_btn">Nothing Displayed</a>
+        <a href="./stand.html" class="cp_btn">AR Marker Mode</a>
         <a href="../" class="cp_btn">Back to Portfolio</a>
     </div>
 </body>
